event-planner/src/App.css
@import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');

body{
font-family: 'Playfair Display', serif;
}

.App {
  text-align: center;
}

.navbar {
  text-align: center;
  width: 100%;
  background: slateblue;
  font-size: 25px;
display: flex;
}

.nav-group {
  color: slateblue;
  display: flex;
    justify-content: space-between;
}

.nav-brand{
  margin-top: 1.5%;
  margin-left: 5%;
}

.nav-brand {
  text-decoration: none;
  color: black;
}

.nav-items{
  display: flex;
  margin-right: 2%;
 width: 30%;
}

.nav-item{
margin-right: 5%;

}

.NavbarBrand {
  text-decoration: none;
}

li a{
  text-decoration: none;
  color: black;
}

li a:hover{
  text-decoration: none;
  color: slateblue;
  background: white;
   transition: ease 0.6s;
   border-radius: 5px;
   
}

.footer {
  display: flex;
  justify-content: space-around;
  align-content: center;
  align-items: center;
  background-color: slateblue;
  color: black;

  font-size: 20px;
  width: 100%;
  margin-top: 5%;
}

.copyright {
  padding-top: 0.4%;
}

.social-div {
  width: 50%;
  margin-left: 7%;
}

.fb {
  margin-left: 10%;
}
.sign-up a {
  text-decoration: none;
  color: #000;
}

.ig {
  margin-left: 10%;
}

.event-page {
  display: flex;
  justify-content: space-evenly;
}

.info-block {
  margin-top: 5%;
  font-weight: bold;
}

.update-block {
  margin-top: 5%;
  width: 15%;
  margin-left: 20%;
}

.edit-btn {
  margin-left: 10%;
  border: 1px solid black;
  padding: 3% 7% 3% 7%;
  background-color: slateblue;
  border-radius: 5px;
   text-decoration: none;
   color: black;
    font-weight: bold;
}

.edit-btn:hover{
  background: white;
  color: slateblue;
  border: 1px solid slateblue;
   transition: ease 0.6s;
}

.delete-btn {
  margin-left: 10%;
  border: 1px solid black;
  padding: 3% 7% 3% 7%;
  background-color: slateblue;
  border-radius: 5px;
  text-decoration: none;
  color: black;
   font-weight: bold;
}


.delete-btn:hover{
  background: white;
  color: slateblue;
  border: 1px solid slateblue;
  transition: ease 0.6s;
}

.main-section {
  background-color: rgba(106, 90, 205, 0.6);
  width: 1360px;
  height: 1200px;
  margin-left: 5%;
  border: 1px solid black;
  border-radius: 2px;
}

.event-title {
  margin-left: 22%;
  margin-top: 2%;
}

.todo-styles {
  background-color: rgba(106, 90, 205, 0.6);
  width: 90%;
  height: 500px;
  margin-left: 5%;
  border: 1px solid black;
  border-radius: 2px;
}

.event-card{
  border: 2px solid slateblue;
  color: black;
  width: 25%;
  box-shadow: 5px 10px 8px 5px #888888;
}

.event-btn{
  background: slateblue;
  color: white;
  padding: 2% 5%;
  border: black;
}

.follow-us{
  margin-left: 10%;
}

